--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,7 +1,8 @@
 services:
   kogito-bpmn-pgsql-ha-bpmn-workflow:
     container_name: kogito-bpmn-pgsql-ha-bpmn-workflow
-    image: dev.local/kogito-bpmn-pgsql-ha-bpmn-workflow:1.0.0
+    image: dev.local/${USER}/kogito-bpmn-pgsql-ha-bpmn-workflow:1.0.0
+    profiles: [ "full" ]
     ports:
       - '8080:8080'
       - '8083:8083'
@@ -10,8 +11,8 @@ services:
     environment:
       QUARKUS_HTTP_CORS_ORIGINS: /.*/
       # See https://quarkus.io/guides/datasource#jdbc-configuration
-      QUARKUS_DATASOURCE_JDBC_URL: 'jdbc:postgresql://haproxy:5432/postgres?currentSchema=kogito'
-      QUARKUS_DATASOURCE_REACTIVE_URL: 'postgresql://haproxy:5432/postgres?currentSchema=kogito'
+      QUARKUS_DATASOURCE_JDBC_URL: 'jdbc:postgresql://haproxy:5432/postgres'
+      QUARKUS_DATASOURCE_REACTIVE_URL: 'postgresql://haproxy:5432/postgres'
       QUARKUS_DATASOURCE_USERNAME: postgres
       QUARKUS_DATASOURCE_PASSWORD: postgres
       QUARKUS_DATASOURCE_DB_KIND: postgresql
@@ -44,7 +45,7 @@ services:
       KOGITO_JOBS_SERVICE_URL: 'http://localhost:8080'
       # The current chunk size in minutes the scheduler handles, it is used to keep a limit number of jobs scheduled
       # in the in-memory scheduler.
-      #KOGITO_JOBS-SERVICE_SCHEDULERCHUNKINMINUTES: 10
+      #KOGITO_JOBS_SERVICE_SCHEDULERCHUNKINMINUTES: 1
       # The interval the job loading method runs to fetch the persisted jobs from the repository.
       #KOGITO_JOBS-SERVICE_LOADJOBINTERVALINMINUTES: 10
       # The interval based on the current time the job loading method uses to fetch jobs "FROM (now -
@@ -57,90 +58,91 @@ services:
       #KOGITO_JOBS-SERVICE_LOADJOBERRORSTRATEGY: FAIL_SERVICE
       QUARKUS_FLYWAY_MIGRATE-AT-START: "true"
       QUARKUS_FLYWAY_BASELINE-ON-MIGRATE: "true"
-      QUARKUS_FLYWAY_BASELINE-VERSION: "0_0"
+      QUARKUS_FLYWAY_BASELINE-VERSION: "0.0"
       QUARKUS_FLYWAY_LOCATIONS: "classpath:/db/migration,classpath:/db/jobs-service,classpath:/db/data-audit/postgresql"
       QUARKUS_FLYWAY_TABLE: "FLYWAY_RUNTIME_SERVICE"
       QUARKUS_FLYWAY_OUT-OF-ORDER: "true"
     depends_on:
       haproxy:
         condition: service_started
-  keycloak:
-    container_name: keycloak
-    image: quay.io/keycloak/keycloak:23.0.7-0
-    profiles:
-      - kogito-consoles
-    ports:
-      - '8480:8080'
-    depends_on:
-      haproxy:
-        condition: service_started
-    volumes:
-      - ./keycloak:/opt/keycloak/data/import
-    healthcheck:
-      test:
-        - CMD
-        - curl
-        - '-f'
-        - 'http://localhost:8080/realms/kogito'
-      interval: 2s
-      timeout: 1s
-      retries: 50
-    environment:
-      DB_VENDOR: POSTGRES
-      DB_SCHEMA: keycloak
-      DB_ADDR: haproxy
-      DB_DATABASE: postgres
-      DB_USER: postgres
-      DB_PASSWORD: postgres
-      KEYCLOAK_USER: admin
-      KEYCLOAK_PASSWORD: admin
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
-    command:
-      start-dev --import-realm --hostname-port=8480 --health-enabled=true
-  kogito-management-console:
-    container_name: kogito-management-console
-    image: apache/incubator-kie-kogito-management-console:main
-    profiles:
-      - kogito-consoles
-    ports:
-      - '8280:8080'
-    depends_on:
-      keycloak:
-        condition: service_started
-    volumes:
-      - './svg/:/home/kogito/data/svg/'
-    environment:
-      KOGITO_CONSOLES_KEYCLOAK_HEALTH_CHECK_URL: >-
-        http://localhost:8480/realms/kogito/.well-known/openid-configuration
-      KOGITO_CONSOLES_KEYCLOAK_URL: 'http://localhost:8480'
-      KOGITO_CONSOLES_KEYCLOAK_REALM: kogito
-      KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: kogito-console-quarkus
-      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_KOGITO_ENV_MODE: "PROD"
-      RUNTIME_TOOLS_MANAGEMENT_CONSOLE_DATA_INDEX_ENDPOINT: http://localhost:8080/graphql
-  kogito-task-console:
-    container_name: kogito-task-console
-    image: apache/incubator-kie-kogito-task-console:main
-    profiles:
-      - kogito-consoles
-    ports:
-      - '8380:8080'
-    depends_on:
-      keycloak:
-        condition: service_started
-    environment:
-      KOGITO_CONSOLES_KEYCLOAK_HEALTH_CHECK_URL: >-
-        http://localhost:8480/realms/kogito/.well-known/openid-configuration
-      KOGITO_CONSOLES_KEYCLOAK_URL: 'http://localhost:8480'
-      KOGITO_CONSOLES_KEYCLOAK_REALM: kogito
-      KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: kogito-console-quarkus
-      RUNTIME_TOOLS_TASK_CONSOLE_KOGITO_ENV_MODE: "PROD"
-      RUNTIME_TOOLS_TASK_CONSOLE_DATA_INDEX_ENDPOINT: http://localhost:8080/graphql
-      RUNTIME_TOOLS_TASK_CONSOLE_KOGITO_TASK_STATES_LIST: "Ready,Reserved,Completed,Aborted,Skipped"
-      RUNTIME_TOOLS_TASK_CONSOLE_KOGITO_TASK_ACTIVE_STATES_LIST: "Ready,Reserved"
+  # keycloak:
+  #   container_name: keycloak
+  #   image: quay.io/keycloak/keycloak:23.0.7-0
+  #   profiles:
+  #     - kogito-consoles
+  #   ports:
+  #     - '8480:8080'
+  #   depends_on:
+  #     haproxy:
+  #       condition: service_started
+  #   volumes:
+  #     - ./keycloak:/opt/keycloak/data/import
+  #   healthcheck:
+  #     test:
+  #       - CMD
+  #       - curl
+  #       - '-f'
+  #       - 'http://localhost:8080/realms/kogito'
+  #     interval: 2s
+  #     timeout: 1s
+  #     retries: 50
+  #   environment:
+  #     DB_VENDOR: POSTGRES
+  #     DB_SCHEMA: keycloak
+  #     DB_ADDR: haproxy
+  #     DB_DATABASE: postgres
+  #     DB_USER: postgres
+  #     DB_PASSWORD: postgres
+  #     KEYCLOAK_USER: admin
+  #     KEYCLOAK_PASSWORD: admin
+  #     KEYCLOAK_ADMIN: admin
+  #     KEYCLOAK_ADMIN_PASSWORD: admin
+  #   command:
+  #     start-dev --import-realm --hostname-port=8480 --health-enabled=true
+  # kogito-management-console:
+  #   container_name: kogito-management-console
+  #   image: apache/incubator-kie-kogito-management-console:main
+  #   profiles:
+  #     - kogito-consoles
+  #   ports:
+  #     - '8280:8080'
+  #   depends_on:
+  #     keycloak:
+  #       condition: service_started
+  #   volumes:
+  #     - './svg/:/home/kogito/data/svg/'
+  #   environment:
+  #     KOGITO_CONSOLES_KEYCLOAK_HEALTH_CHECK_URL: >-
+  #       http://localhost:8480/realms/kogito/.well-known/openid-configuration
+  #     KOGITO_CONSOLES_KEYCLOAK_URL: 'http://localhost:8480'
+  #     KOGITO_CONSOLES_KEYCLOAK_REALM: kogito
+  #     KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: kogito-console-quarkus
+  #     RUNTIME_TOOLS_MANAGEMENT_CONSOLE_KOGITO_ENV_MODE: "PROD"
+  #     RUNTIME_TOOLS_MANAGEMENT_CONSOLE_DATA_INDEX_ENDPOINT: http://localhost:8080/graphql
+  # kogito-task-console:
+  #   container_name: kogito-task-console
+  #   image: apache/incubator-kie-kogito-task-console:main
+  #   profiles:
+  #     - kogito-consoles
+  #   ports:
+  #     - '8380:8080'
+  #   depends_on:
+  #     keycloak:
+  #       condition: service_started
+  #   environment:
+  #     KOGITO_CONSOLES_KEYCLOAK_HEALTH_CHECK_URL: >-
+  #       http://localhost:8480/realms/kogito/.well-known/openid-configuration
+  #     KOGITO_CONSOLES_KEYCLOAK_URL: 'http://localhost:8480'
+  #     KOGITO_CONSOLES_KEYCLOAK_REALM: kogito
+  #     KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID: kogito-console-quarkus
+  #     RUNTIME_TOOLS_TASK_CONSOLE_KOGITO_ENV_MODE: "PROD"
+  #     RUNTIME_TOOLS_TASK_CONSOLE_DATA_INDEX_ENDPOINT: http://localhost:8080/graphql
+  #     RUNTIME_TOOLS_TASK_CONSOLE_KOGITO_TASK_STATES_LIST: "Ready,Reserved,Completed,Aborted,Skipped"
+  #     RUNTIME_TOOLS_TASK_CONSOLE_KOGITO_TASK_ACTIVE_STATES_LIST: "Ready,Reserved"
   haproxy:
     image: jizuzquiza/haproxy-pgsql-ha:1.0.0
     container_name: haproxy
+    profiles: [ "infra", "full" ]
     ports:
       - 5432:5432
       - 7000:7000
@@ -154,6 +156,7 @@ services:
   zoo1:
     image: confluentinc/cp-zookeeper:latest
     container_name: zoo
+    profiles: [ "infra", "full" ]
     restart: always
     hostname: zoo1
     ports:
@@ -164,6 +167,7 @@ services:
   pg-master:
     image: jizuzquiza/postgresql-ha:1.0.0
     container_name: pg-master
+    profiles: [ "infra", "full" ]
     restart: always
     hostname: pg-master
     environment:
@@ -186,6 +190,7 @@ services:
   pg-slave:
     image: jizuzquiza/postgresql-ha:1.0.0
     container_name: pg-slave
+    profiles: [ "infra", "full" ]
     restart: always
     hostname: pg-slave
     expose:
@@ -208,6 +213,7 @@ services:
   pgadmin:
     image: dpage/pgadmin4:8.2
     container_name: pgadmin
+    profiles: [ "infra", "full" ]
     ports:
       - 8055:80
     volumes:
