--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,17 @@ quarkus.swagger-ui.always-include=true
 kogito.persistence.proto.marshaller=false
 kogito.persistence.type=jdbc
 
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=postgres
+quarkus.datasource.password=postgres
+quarkus.datasource.jdbc.url=${QUARKUS_DATASOURCE_JDBC_URL:jdbc:postgresql://localhost:5432/postgres}
+quarkus.datasource.reactive.url=${QUARKUS_DATASOURCE_REACTIVE_URL:postgresql://localhost:5432/postgres}
+
+kogito.jobs-service.schedulerChunkInMinutes=5
+kogito.jobs-service.loadJobIntervalInMinutes=1
+kogito.jobs-service.loadJobFromCurrentTimeIntervalInMinutes=11
+kogito.jobs-service.loadJobRetries=3
+
 # Data-Index UI
 quarkus.kogito.data-index.graphql.ui.always-include=true
 
@@ -50,11 +61,18 @@ quarkus.flyway.out-of-order=true
 quarkus.oidc.enabled=false
 
 # Logs
-quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{20.}] (%t) %s%e%n
+# quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{20.}] (%t) %s%e%n
 quarkus.logging-manager.openapi.included=true
 
 quarkus.log.category."org.kie.kogito".level=INFO
 quarkus.log.category."org.kie.kogito.jobs".level=DEBUG
+quarkus.log.category."org.jbpm".level=DEBUG
+quarkus.log.category."org.jbpm.flow.serialization".level=INFO
+quarkus.log.category."org.jbpm.workflow.instance.impl.NodeInstanceFactoryRegistry".level=INFO
+quarkus.log.category."org.kie.kogito".level=DEBUG
+quarkus.log.category."org.kie.kogito.event".level=INFO
+quarkus.log.category."org.kie.kogito.app.audit".level=INFO
+quarkus.log.category."org.kie.kogito.index".level=INFO
 
 # OpenTelemetry Traces (Jaeger)
 %dev.quarkus.otel.exporter.otlp.traces.endpoint=http://localhost:4317
@@ -65,3 +83,5 @@ quarkus.log.category."org.kie.kogito.jobs".level=DEBUG
 %dev.quarkus.micrometer.registry-enabled-default=true
 %dev.quarkus.micrometer.export.otlp.get-enabled=true
 %dev.quarkus.micrometer.export.otlp.url=http://localhost:4318/v1/metrics
+
+#kogito.jobs-service.schedulerChunkInMinutes=1
