--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
     <quarkus.platform.version>3.8.6</quarkus.platform.version>
     <kogito.bom.group-id>org.kie.kogito</kogito.bom.group-id>
     <kogito.bom.artifact-id>kogito-bom</kogito.bom.artifact-id>
-    <kogito.bom.version>999-SNAPSHOT</kogito.bom.version>
+    <kogito.bom.version>999-20241103-SNAPSHOT</kogito.bom.version>
     <kogito-apps.bom.artifact-id>kogito-apps-bom</kogito-apps.bom.artifact-id>
-    <version.org.kie.kogito>999-SNAPSHOT</version.org.kie.kogito>
+    <version.org.kie.kogito>999-20241103-SNAPSHOT</version.org.kie.kogito>
   </properties>
 
   <repositories>
